package seedu.allinonenus.capcalculatorclasses.commandsforcapcalculator;

import seedu.allinonenus.capcalculatorclasses.logicforcapcalculator.ModuleList;
import seedu.allinonenus.capcalculatorclasses.storageforcapcalculator.ModuleStorage;
import seedu.allinonenus.capcalculatorclasses.uiforcapcalculator.UiText;

import java.io.FileNotFoundException;
import java.io.IOException;

public class DeleteModuleCommand extends CommandsForCapCalculator{
    public DeleteModuleCommand() {
        super();
    }

    public void executeCommand(ModuleList moduleList, ModuleStorage storage, UiText uiText, String fullCommand){
        String[] moduleInfo = fullCommand.split(" ");
        String moduleToDelete = moduleInfo[1];
        moduleList.delete(moduleToDelete);
        System.out.print("Deleted " + moduleToDelete + "\n"
                + "This is your new list:\n");
        saveToStorage(storage,moduleList);
    }

    public void saveToStorage(ModuleStorage storage, ModuleList moduleList) {
        // String filepath = storage.storageFilePath;
        int currentSem = storage.currentSem;
        int totalSem = storage.totalSem;
        try {
            storage.writeToFile(moduleList, currentSem, totalSem);
        } catch (FileNotFoundException e) {
            storage.fileDoesntExist();
        } catch (IOException e) {
            System.out.print("File Error\n");
        }
    }

    public boolean isExit(){
        return exit;
    }
}
